--- a/index.html
+++ b/index.html
@@ -495,6 +495,7 @@
             .heart-button-text {
                 font-size: 1.1rem;
                 top: 22px;
+                margin: -11px 0 0 23px;
             }
             
             .ribbon {
@@ -853,3 +854,4 @@ window.addEventListener('load', function() {
 </body>
 
 </html>
+
