--- a/memory.html
+++ b/memory.html
@@ -94,7 +94,7 @@
             text-align: center;
             margin-bottom: 3rem;
             animation: fadeInUp 1.5s ease-out;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgb(176 28 134 / 90%);
             backdrop-filter: blur(10px);
             padding: 2rem;
             border-radius: 20px;
@@ -1094,4 +1094,5 @@
         });
     </script>
 </body>
+
 </html>
