--- a/memory.html
+++ b/memory.html
@@ -164,7 +164,7 @@
 
         .btn {
             padding: 0.8rem 1.5rem;
-            background: rgba(255, 255, 255, 0.2);
+            background: rgb(249 35 35 / 20%);
             color: white;
             border: 2px solid rgba(255, 255, 255, 0.5);
             border-radius: 50px;
@@ -1096,3 +1096,4 @@
 </body>
 
 </html>
+
